--- a/styles/architect.css
+++ b/styles/architect.css
@@ -9,6 +9,10 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.text-light-gray{
+    color: #727272;
+}
+
 .btn-primary {
     border-radius: 8px;
     background: #FF900E;
@@ -67,10 +71,6 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-}
-
 .banner img{
     margin-top: 20px;
     width: 100%;
@@ -79,7 +79,7 @@ nav li a {
 /*Main Styles*/
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 50px auto;
 }
 
 /*Teams Styles*/
@@ -114,14 +114,22 @@ main{
     header{
         padding: 20px;
     }
-    nav{
+    nav,
+    .teams-container{
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
 /*Medium Devices*/
 @media screen and (min-width: 576px) and (max-width: 960px){
-    nav{
+    nav, .teams-container{
         flex-direction: column;
     }
     header{
