--- a/styles/architect.css
+++ b/styles/architect.css
@@ -23,6 +23,12 @@
     cursor: pointer;
     border: 0px;
 }
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #131313;
+}
+
 
 /*Header Styles*/
 header {
@@ -34,12 +40,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title {
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #131313;
 }
 
 nav>ul {
