--- a/styles/architect.css
+++ b/styles/architect.css
@@ -9,7 +9,7 @@
     font-family: 'Work Sans', sans-serif;
 }
 
-.text-light-gray{
+.text-light-gray {
     color: #727272;
 }
 
@@ -23,6 +23,7 @@
     cursor: pointer;
     border: 0px;
 }
+
 .section-title {
     font-size: 2.8rem;
     font-weight: 700;
@@ -71,68 +72,121 @@ nav li a {
     color: #131313;
 }
 
-.banner img{
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
 
 /*Main Styles*/
-main{
+main {
     max-width: 1440px;
     margin: 50px auto;
 }
 
 /*Teams Styles*/
-.teams-container{
+.teams-container {
     display: flex;
     align-items: center;
 }
-.teams-img-container{
+
+.teams-img-container {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
 }
-.teams-content{
+
+.teams-content {
     padding-left: 70px;
     padding-right: 70px;
 }
-.teams-title{
+
+.teams-title {
     font-size: 2.8rem;
 }
-.teams-title .quick-list{
+
+.teams-title .quick-list {
     color: #727272;
     font-weight: 500;
 }
-.teams-title .text-features{
+
+.teams-title .text-features {
     color: #FF900E;
     font-weight: 700;
 }
 
+/*Facts Section*/
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+/*Sponsors Styles*/
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
+
 /*Responsive Media Queries*/
 /*Mobile Devices*/
-@media screen and (max-width: 576px){
-    header{
+@media screen and (max-width: 576px) {
+    header {
         padding: 20px;
     }
+
     nav,
-    .teams-container{
+    .teams-container,
+    .facts-card-container, .sponsors-img-container{
         flex-direction: column;
     }
-    .teams-img-container{
+
+    .teams-img-container {
         grid-template-columns: 1fr;
     }
-    .teams-content{
+
+    .teams-content, .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
     }
+    .facts-card-container{
+        gap: 20px;
+    }
+   
 }
 
 /*Medium Devices*/
-@media screen and (min-width: 576px) and (max-width: 960px){
-    nav, .teams-container{
+@media screen and (min-width: 576px) and (max-width: 960px) {
+
+    nav,
+    .teams-container, .sponsors-img-container {
         flex-direction: column;
     }
-    header{
+
+    header {
         padding: 50px;
     }
 }
