--- a/styles/architect.css
+++ b/styles/architect.css
@@ -114,40 +114,89 @@ main {
     font-weight: 700;
 }
 
+/*Features Section Styles*/
+.features {
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+}
+.feature-img img{
+    height: 90%;
+    margin-right: 100px;
+
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 142px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 70px;
+    right: 70px;
+}
+.ten-years-badge h2{
+    font-size: 1rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 0.5rem;
+}
 /*Facts Section*/
-.facts-card-container{
+.facts-card-container {
     display: flex;
     justify-content: space-around;
 }
+
 .facts-card-container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
 }
-.facts-card-container .card-title{
+
+.facts-card-container .card-title {
     font-weight: 600;
     font-size: 1.25rem;
     margin-top: 5px;
 }
-.facts-card-container .card-stats{
+
+.facts-card-container .card-stats {
     font-size: 2.8rem;
     color: #424242;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 /*Sponsors Styles*/
-.sponsors{
+.sponsors {
     text-align: center;
 }
-.sponsors-img-container{
+
+.sponsors-img-container {
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 20px;
 }
-.sponsors-img-container img{
+
+.sponsors-img-container img {
     width: 165px;
 }
 
@@ -160,29 +209,40 @@ main {
 
     nav,
     .teams-container,
-    .facts-card-container, .sponsors-img-container{
+    .facts-card-container,
+    .sponsors-img-container, .features {
         flex-direction: column;
     }
-
+    .feature-img img{
+        width: 100%;
+    }
     .teams-img-container {
         grid-template-columns: 1fr;
     }
 
-    .teams-content, .facts-card-container{
+    .teams-content,
+    .facts-card-container {
         padding-left: 20px;
         padding-right: 20px;
     }
-    .facts-card-container{
+
+    .facts-card-container {
         gap: 20px;
     }
-   
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+    }
+    
+
 }
 
 /*Medium Devices*/
 @media screen and (min-width: 576px) and (max-width: 960px) {
 
     nav,
-    .teams-container, .sponsors-img-container {
+    .teams-container,
+    .sponsors-img-container, .features{
         flex-direction: column;
     }
 
